salesforce/companion/force-app/main/default/objects/Contact/fields/Active_Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Active_Conversation_Id__c</fullName>
    <label>Active Conversation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>