salesforce/companion/force-app/main/default/objects/Contact/fields/Last_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Last_Sentiment__c</fullName>
    <label>Last Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>