salesforce/companion/force-app/main/default/objects/Contact/fields/Mobile_Last10__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Last10__c</fullName>
    <label>Mobile Phone (last 10 digits)</label>
    <description>Last 10 digits of MobilePhone with formatting removed. Lets Copilot Studio match a caller's phone number to this Contact.</description>
    <formula>RIGHT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone, " ", ""), "-", ""), "(", ""), ")", ""), "+", ""), ".", ""), 10)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>